--- a/20250305/index.html
+++ b/20250305/index.html
@@ -11,6 +11,6 @@
       <img src="./img/자동차사진.jpg" alt="부릉부릉" />
     </div>
 
-    <button class="btn">클릭하세요</button>
+    <button class="btn">클릭하세요a</button>
   </body>
 </html>
